--- a/NewMenuList1.html
+++ b/NewMenuList1.html
@@ -15,35 +15,29 @@
                    <h2>피치 플럼 요거트 빙수</h2>
                    <div class="menu-detail-view">
                        <div class="menu-detail-view-photo">
-                            <img src="img/PeachPlumYogurtFlakes.png" alt="피치 플럼 요거트 빙수">
+                         <img src="img/PeachPlumYogurtFlakes.png" alt="피치 플럼 요거트 빙수">
                        </div>
-
-                       						<div class="menu-detail-view-info">
-						   <p class="t1">새콤한 천도복숭아와 향긋한 자두, 천도복숭아 젤라또가 올라간 상큼달콤한 더블 젤라또 빙수</p>
-						   						   <p class="t2">열량 및 영양성분</p>
-						   <table class="mdv-tb1 row">
-                            <colgroup>
-                                <col style="width:auto">
-                                <col style="width:45%">
-                            </colgroup>             
-                            <tbody>
-													 </tbody>
+			<div class="menu-detail-view-info">
+                         <p class="t1">새콤한 천도복숭아와 향긋한 자두, 천도복숭아 젤라또가 올라간 상큼달콤한 더블 젤라또 빙수</p>
+		           <p class="t2">열량 및 영양성분</p>
+			    <table class="mdv-tb1 row">
+                             <colgroup>
+                              <col style="width:auto">
+                              <col style="width:45%">
+                             </colgroup>   
+                              <tbody>
+			       </tbody>									
                            </table>  
-						   					   </div>
+			 </div>			   					  
                    </div>
                 </div>
             </div>            
             <div class="board-btn-btm">
-				<a href="newmenu.html" class="btn-lg b-blue">목록</a> <!-- 목록 클릭하면 신메뉴 페이지로 돌아가게 했습니다-->
+	     <a href="newmenu.html" class="btn-lg b-blue">목록</a> <!-- 목록 클릭하면 신메뉴 페이지로 돌아가게 했습니다-->
             </div>
         </section>
-        
-	</div><!-- id : container -->
-
-	<footer id="footer">
+<footer id="footer">
 	
 </footer><!-- id : footer -->	
-</div><!-- id : wrap -->
-
-
-	</body></html>
+</body>
+</html>
