--- a/NewMenuList4.html
+++ b/NewMenuList4.html
@@ -17,33 +17,30 @@
                        <div class="menu-detail-view-photo">
                             <img src="img/PeachPlumGelatoAde.png" alt="피치 플럼 젤라또 에이드">
                        </div>
-
-                       						<div class="menu-detail-view-info">
-						   <p class="t1">천도복숭아의 향긋함과 달콤한 자두, 천도복숭아 젤라또가 어우러진 청량 가득한 젤라또 에이드</p>
-						   						   <p class="t2">열량 및 영양성분</p>
-						   <table class="mdv-tb1 row">
-                            <colgroup>
-                                <col style="width:auto">
-                                <col style="width:45%">
-                            </colgroup>             
-                            <tbody>
-													 </tbody>
-                           </table>  
-						   					   </div>
-                   </div>
+            			<div class="menu-detail-view-info">
+            		   <p class="t1">천도복숭아의 향긋함과 달콤한 자두, 천도복숭아 젤라또가 어우러진 청량 가득한 젤라또 에이드</p>
+								   <p class="t2">열량 및 영양성분</p>
+						        <table class="mdv-tb1 row">
+                      <colgroup>
+                        <col style="width:auto">
+                        <col style="width:45%">
+                      </colgroup>             
+                       <tbody>
+								   		 </tbody>
+                       </table>  
+						   		 </div>
                 </div>
+              </div>
             </div>            
             <div class="board-btn-btm">
-				<a href="newmenu.html" class="btn-lg b-blue">목록</a> 
+				      <a href="newmenu.html" class="btn-lg b-blue">목록</a> 
             </div>
         </section>
         
-	</div><!-- id : container -->
+	
 
 	<footer id="footer">
 	
 </footer><!-- id : footer -->	
-</div><!-- id : wrap -->
-
-
-	</body></html>
+	</body>
+</html>
