--- a/bene_header.html
+++ b/bene_header.html
@@ -9,25 +9,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="http://caffebene.com/favicon-32x32.png?20200625">
     <link rel="stylesheet" href="css/header.css">
 
-
   </head>
   <body>
     <div id="wrap">
-      <header id="header">
+      <header id="header" class="on">
         <div class="static">
           <h1 class="logo"><a>caffeBENE</a></h1>
           <nav id="gnb">
-            <ul>
-              <li>Caffebene
-                <ul>
+            <ul class="mainmenu">
+              <li><a>Caffebene</a>
+                <ul class="submenu">
                   <li><a>브랜드 스토리</a></li>
                   <li><a>베네캣 스토리</a></li>
                   <li><a>카페베네 원두</a></li>
                   <li><a>카페베네 소식</a></li>
                 </ul>
               </li>
-              <li>Menu
-                <ul>
+              <li><a>Menu</a>
+                <ul class="submenu">
                   <li><a href="신메뉴페이지">신메뉴</a></li>
                   <li><a>커피</a></li>
                   <li><a>음료</a></li>
@@ -36,29 +35,29 @@
                   <li><a>Retail</a></li>
                 </ul>
               </li>
-              <li>Store
-                <ul>
+              <li><a>Store</a>
+                <ul class="submenu">
                   <li><a>국내</a></li>
                   <li><a>해외</a></li>
                 </ul>
               </li>
-              <li>Membership
-                <ul>
+              <li><a>Mempership</a>
+                <ul class="submenu">
                   <li><a>등급&혜택</a></li>
                   <li><a>가입방법안내</a></li>
                   <li><a>서비스</a></li>
                   <li><a>FAQ</a></li>
                 </ul>
               </li>
-              <li>Global
-                <ul>
+              <li><a>Global</a>
+                <ul class="submenu">
                   <li><a>해외매장안내</a></li>
                   <li><a href="해외사업소개페이지">해외사업소개</a></li>
                   <li><a>해외가맹&유통문의</a></li>
                 </ul>
               </li>
-              <li>Contents
-                <ul>
+              <li><a>Contents</a>
+                <ul class="submenu">
                   <li><a>커피</a></li>
                   <li><a>우리동네</a></li>
                   <li><a>사람들</a></li>
@@ -78,7 +77,26 @@
           </div>
         </div>
       </header><!--header-->
-  
+
+      <div id="container" class="main">
+        <div>
+          <p>메인이야
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          </p>
+        </div>
+        <div class="aside">
+          <a class="aside-nbene">
+            <img src="img/popup.png">
+            <!-- 창업설명회 -->
+          </a>
+          <a class="aside-insta">
+            <img src="img/aside-insta.png">
+            <!-- 인스타그램 -->
+          </a>
+        </div>
+      </div><!--main-->
+
       <footer id="footer">
         <div class="footer-top">
           <div class="static">
