--- a/NewMenuList1.html
+++ b/NewMenuList1.html
@@ -103,7 +103,7 @@
                 <div class="path">
                     <div class="static">
                         <a href="index.html"><span >홈</span></a>
-                        <a href="#"><span>Menu</span></a>
+                        <a href="newmenu.html"><span>Menu</span></a>
                         <a href="#"><span>디저트</span></a>
                     </div>
                 </div>
