--- a/main.html
+++ b/main.html
@@ -5,10 +5,10 @@
 <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 <body>
-<p id="accessibility"><a href="#container">본문바로가기</a></p><div id="wrap">
+<p id="accessibility"></p>
 	<div id="container" class="main">
 				<section class="main-slider">
-									<div><img src="C:\Users\82107\Desktop\카페베네\img\main.jpg" alt="피치플럼빙수"></div>
+							<div><img src="C:\Users\82107\Desktop\카페베네\img\main.jpg" alt="피치플럼빙수"></div>
 				</section>		
 		<section class="static contents">
 						<h3>Contents</h3>
@@ -139,14 +139,14 @@
 								<h3><img src="C:\Users\82107\Desktop\카페베네\img\banner1.jpg" alt="배너1"></h3>
 								<div class="ha-bx1">
 										<a target="_self" class="tit-ar">						
-											<img src="C:\Users\82107\Desktop\카페베네\img\banner2.jpg" alt="배너2">
+											<img src="C:\Users\82107\Desktop\카페베네\img\banner2.gif" alt="배너2">
 						<p>'좋은’ 사람들이<br>
 							‘좋은’ 원두로 <br>
 							‘좋은’ 커피를 내리는 곳<br>
 							 바로 카페베네입니다.</p>
 					</a>															
 					<a target="_self" class="pho-ar">
-						<img src="C:\Users\82107\Desktop\카페베네\img\banner3.gif" alt="배너3"></a>									
+						<img src="C:\Users\82107\Desktop\카페베네\img\banner3.jpg" alt="배너3"></a>									
 					</div>
 								<div class="mov-ar">
 					<!-- 이미지 이거나 동영상 -->
