Header+NewMenu Merge

--- a/bene_header.html
+++ b/bene_header.html
@@ -27,9 +27,9 @@
                   <li><a>카페베네 소식</a></li>
                 </ul>
               </li>
-              <li><a href="신메뉴페이지" class="menutitle">Menu</a>
+              <li><a href="newmenu.html" class="menutitle">Menu</a>
                 <ul class="submenu">
-                  <li><a href="신메뉴페이지">신메뉴</a></li>
+                  <li><a href="newmenu.html">신메뉴</a></li>
                   <li><a>커피</a></li>
                   <li><a>음료</a></li>
                   <li><a>디저트</a></li>
@@ -51,10 +51,10 @@
                   <li><a>FAQ</a></li>
                 </ul>
               </li>
-              <li><a href="해외사업소개페이지" class="menutitle">Global</a>
+              <li><a href="overseasbusiness" class="menutitle">Global</a>
                 <ul class="submenu">
                   <li><a>해외매장안내</a></li>
-                  <li><a href="해외사업소개페이지">해외사업소개</a></li>
+                  <li><a href="overseasbusiness">해외사업소개</a></li>
                   <li><a>해외가맹&amp;유통문의</a></li>
                 </ul>
               </li>
