--- a/newmenu.html
+++ b/newmenu.html
@@ -2,11 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>신메뉴 페이지</title>
+    <title>CAFFEBENE 페이지</title>
     <link rel="stylesheet" type="text/css" href="css/newmenu.css">
+    <meta property="og:title" content="CAFFEBENE">
+    <meta property="og:image" content="http://caffebene.com/images/common/share_image.jpg?20200625">
+    <meta property="og:url" content="#">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://caffebene.com/favicon-32x32.png?20200625">
+    <link rel="stylesheet" href="css/header.css">
+    <!--js-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body>
+<div id="wrap">
+    <header id="header">
+        <div class="static">
+            <h1 class="logo"><a href="bene_header.html">caffeBENE</a></h1>
+            <nav id="gnb">
+                <ul class="mainmenu">
+                    <li><a class="menutitle">Caffebene</a>
+                        <ul class="submenu">
+                            <li><a>브랜드 스토리</a></li>
+                            <li><a>베네캣 스토리</a></li>
+                            <li><a>카페베네 원두</a></li>
+                            <li><a>카페베네 소식</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="newmenu.html" class="menutitle">Menu</a>
+                        <ul class="submenu">
+                            <li><a href="newmenu.html">신메뉴</a></li>
+                            <li><a>커피</a></li>
+                            <li><a>음료</a></li>
+                            <li><a>디저트</a></li>
+                            <li><a>MD상품</a></li>
+                            <li><a>Retail</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="menutitle">Store</a>
+                        <ul class="submenu">
+                            <li><a>국내</a></li>
+                            <li><a>해외</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="menutitle">Mempership</a>
+                        <ul class="submenu">
+                            <li><a>등급&amp;혜택</a></li>
+                            <li><a>가입방법안내</a></li>
+                            <li><a>서비스</a></li>
+                            <li><a>FAQ</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="해외사업소개페이지" class="menutitle">Global</a>
+                        <ul class="submenu">
+                            <li><a>해외매장안내</a></li>
+                            <li><a href="해외사업소개페이지">해외사업소개</a></li>
+                            <li><a>해외가맹&amp;유통문의</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="menutitle">Contents</a>
+                        <ul class="submenu">
+                            <li><a>커피</a></li>
+                            <li><a>우리동네</a></li>
+                            <li><a>사람들</a></li>
+                            <li><a>메뉴</a></li>
+                            <li><a>이벤트</a></li>
+                            <li><a>매장</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
 
+            <a class="btn">가맹문의</a>
+
+            <div class="lang">
+                <a class="kr">KR</a>
+                <a class="en">EN</a>
+            </div>
+        </div>
+    </header><!--header-->
 <!-- 신메뉴 main 페이지 -->
         <div id="container" class="sub">
             <section class="sub-top">
@@ -55,42 +128,42 @@
                                     <ul id="itemset_12" class="menu-list-items">
                                         <!-- 추후에 주소 추가 필요 // -->
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumYogurtFlakes.png" alt="피치 플럼 요거트 빙수"></div>
                                                 <div class="m-name">피치 플럼 요거트 빙수</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumYogurtIce.png" alt="피치 플럼 요거트 빙수(1인)"></div>
                                                 <div class="m-name">피치 플럼 요거트 빙수(1인)</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachGelato.png" alt="천도복숭아 젤라또"></div>
                                                 <div class="m-name">천도복숭아 젤라또</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumGelatoAde.png" alt="피치 플럼 젤라또 에이드"></div>
                                                 <div class="m-name">피치 플럼 젤라또 에이드</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumFrappeno.png" alt="피치 플럼 프라페노"></div>
                                                 <div class="m-name">피치 플럼 프라페노</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="#" class="menu-list-item">
+                                            <a href="상품페이지주소" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/WaterMelonFrappeno.png" alt="수박 프라페노"></div>
                                                 <div class="m-name">수박 프라페노</div>
                                             </a>
@@ -107,5 +180,43 @@
 
         </div>
 <!-- 신메뉴 main 페이지 여기까지 -->
+    <footer id="footer">
+        <div class="footer-top">
+            <div class="static">
+                <ul>
+                    <li><a>오시는 길</a></li>
+                    <li><a>제휴문의</a></li>
+                    <li><a>개인정보처리방침</a></li>
+                    <li><a>이용약관</a></li>
+                    <li><span>고객센터 1688-4666</span></li>
+                </ul>
+                <button type="button" onclick="window.scrollTo({top:0, left:0, behavior:'smooth'})" class="btn-top">Top</button>
+            </div>
+        </div>
+
+        <div class="footer-btm">
+            <div class="static">
+                <div class="footer-btm-info">
+                    <div class="info">
+                        <address>서울시 성동구 상원1길 25</address>
+                        <span class="tt">대표이사</span>
+                        <span class="ts">박그레타</span>
+                        <br>
+                        <span class="tt">사업자등록번호</span>
+                        <span class="ts">206-86-29161</span>
+                        <span>benecs@caffebene.co.kr</span>
+                    </div>
+                    <p class="copy">Copyright&copy; by Caffebene, All right reserved.</p>
+                </div>
+                <div class="footer-btm-sns">
+                    <a class="ico-fb">페이스북</a>
+                    <a class="ico-inst">인스타그램</a>
+                    <a class="ico-youtube">유투브</a>
+                    <a class="ico-app">APP</a>
+                </div>
+            </div>
+        </div>
+    </footer><!--footer-->
+</div><!--wrap-->
 </body>
 </html>
