--- a/NewMenuList1.html
+++ b/NewMenuList1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>피치 플럼 요거트 빙수 (1인)</title>
+    <title>피치 플럼 요거트 빙수 </title>
     <meta property="og:title" content="CAFFEBENE">
     <meta property="og:image" content="http://caffebene.com/images/common/share_image.jpg?20200625">
     <meta property="og:url" content="#">
@@ -55,7 +55,7 @@
                 <li><a>Global</a>
                   <ul class="submenu">
                     <li><a>해외매장안내</a></li>
-                    <li><a href="해외사업소개페이지">해외사업소개</a></li>
+                    <li><a href="support.html">해외사업소개</a></li>
                     <li><a>해외가맹&유통문의</a></li>
                   </ul>
                 </li>
@@ -108,7 +108,7 @@
                     <h2>피치 플럼 요거트 빙수 </h2>
                     <div class="menu-detail-view">
                        <div class="menu-detail-view-photo">
-                          <img src="img/PeachPlumYogurtIce.png" alt="피치 플럼 요거트 빙수">
+                          <img src="img/PeachPlumYogurtFlakes.png" alt="피치 플럼 요거트 빙수">
                         </div>                      						
                   <div class="menu-detail-view-info">
                    <p class="t1">새콤한 천도복숭아와 향긋한 자두, 천도복숭아 젤라또가 올라간 상큼달콤한 더블 젤라또 빙수</p>
