--- a/H+M.html
+++ b/H+M.html
@@ -87,7 +87,7 @@
 				<div id="container" class="main">
 					<section class="main-slider">
 						<div>
-							<a href="http://caffebene.co.kr/menu/new.html" target="_self">
+							<a href="file:///C:/Users/82107/Downloads/clonebene-merge/clonebene-merge/newmenu.html" target="_self">
 							<img src="img\main.jpg" alt="피치플럼빙수">
 							</a>
 						</div>
