--- a/newmenu.html
+++ b/newmenu.html
@@ -17,7 +17,7 @@
 <div id="wrap">
     <header id="header">
         <div class="static">
-            <h1 class="logo"><a href="bene_header.html">caffeBENE</a></h1>
+            <h1 class="logo"><a href="index.html">caffeBENE</a></h1>
             <nav id="gnb">
                 <ul class="mainmenu">
                     <li><a class="menutitle">Caffebene</a>
@@ -128,42 +128,42 @@
                                     <ul id="itemset_12" class="menu-list-items">
                                         <!-- 추후에 주소 추가 필요 // -->
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList1.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumYogurtFlakes.png" alt="피치 플럼 요거트 빙수"></div>
                                                 <div class="m-name">피치 플럼 요거트 빙수</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList2.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumYogurtIce.png" alt="피치 플럼 요거트 빙수(1인)"></div>
                                                 <div class="m-name">피치 플럼 요거트 빙수(1인)</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList3.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachGelato.png" alt="천도복숭아 젤라또"></div>
                                                 <div class="m-name">천도복숭아 젤라또</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList4.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumGelatoAde.png" alt="피치 플럼 젤라또 에이드"></div>
                                                 <div class="m-name">피치 플럼 젤라또 에이드</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList5.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/PeachPlumFrappeno.png" alt="피치 플럼 프라페노"></div>
                                                 <div class="m-name">피치 플럼 프라페노</div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="상품페이지주소" class="menu-list-item">
+                                            <a href="NewMenuList6.html" class="menu-list-item">
                                                 <div class="m-photo"><img src="img/WaterMelonFrappeno.png" alt="수박 프라페노"></div>
                                                 <div class="m-name">수박 프라페노</div>
                                             </a>
