--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="wrap">
     <header id="header">
         <div class="static">
-            <h1 class="logo"><a href="bene_header.html">caffeBENE</a></h1>
+            <h1 class="logo"><a href="index.html">caffeBENE</a></h1>
             <nav id="gnb">
                 <ul class="mainmenu">
                     <li><a class="menutitle">Caffebene</a>
@@ -28,9 +28,9 @@
                             <li><a>카페베네 소식</a></li>
                         </ul>
                     </li>
-                    <li><a href="신메뉴페이지" class="menutitle">Menu</a>
+                    <li><a href="newmenu.html" class="menutitle">Menu</a>
                         <ul class="submenu">
-                            <li><a href="신메뉴페이지">신메뉴</a></li>
+                            <li><a href="newmenu.html">신메뉴</a></li>
                             <li><a>커피</a></li>
                             <li><a>음료</a></li>
                             <li><a>디저트</a></li>
@@ -52,10 +52,10 @@
                             <li><a>FAQ</a></li>
                         </ul>
                     </li>
-                    <li><a href="해외사업소개페이지" class="menutitle">Global</a>
+                    <li><a href="support.html" class="menutitle">Global</a>
                         <ul class="submenu">
                             <li><a>해외매장안내</a></li>
-                            <li><a href="해외사업소개페이지">해외사업소개</a></li>
+                            <li><a href="support.html">해외사업소개</a></li>
                             <li><a>해외가맹&amp;유통문의</a></li>
                         </ul>
                     </li>
@@ -82,24 +82,13 @@
     </header><!--header-->
 
 
-    <div id="container" class="main">
-        <div class="aside">
-            <a class="aside-nbene">
-                <img src="img/popup.png"><!-- 창업설명회 -->
-            </a>
-            <a class="aside-insta">
-                <img src="img/aside-insta.png"><!-- 인스타그램 -->
-            </a>
-        </div>
-    </div><!--main-->
-
 
     <p id="accessibility"></p>
     <div id="container" class="main">
         <section class="main-slider">
             <div>
-                <a href="http://caffebene.co.kr/menu/new.html" target="_self">
-                    <img src="img\main.jpg" alt="피치플럼빙수">
+                <a href="newmenu.html" target="_self">
+                    <img src="img/main.jpg" alt="피치플럼빙수">
                 </a>
             </div>
         </section>
@@ -109,7 +98,7 @@
                 <ul class="grid" id="grid">
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents1.jpg" alt="피치 플럼 요거트 빙수" width="258" height="258">
+                            <img src="img/contents1.jpg" alt="피치 플럼 요거트 빙수" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -117,7 +106,7 @@
                         </div>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents2.jpg" alt="피치 플럼 요거트 빙수" width="258" height="258">
+                            <img src="img/contents2.jpg" alt="피치 플럼 요거트 빙수" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -126,7 +115,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents3.jpg" alt="피치 플럼 젤라또 에이드" width="258" height="258">
+                            <img src="img/contents3.jpg" alt="피치 플럼 젤라또 에이드" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -135,7 +124,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents4.jpg" alt="피치플럼 & 수박 프라페노" width="258" height="258">
+                            <img src="img/contents4.jpg" alt="피치플럼 & 수박 프라페노" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -144,7 +133,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents5.jpg" alt="환경의 날" width="258" height="258">
+                            <img src="img/contents5.jpg" alt="환경의 날" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">우리동네</p>
@@ -153,7 +142,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents6.jpg" alt="더 맛있어진 팥빙수" width="258" height="258">
+                            <img src="img/contents6.jpg" alt="더 맛있어진 팥빙수" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -162,7 +151,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents7.jpg" alt="드립백 디카페인" width="258" height="258">
+                            <img src="img/contents7.jpg" alt="드립백 디카페인" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">커피</p>
@@ -171,7 +160,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents8.jpg" alt="커피 빙수 디카페인" width="258" height="258">
+                            <img src="img/contents8.jpg" alt="커피 빙수 디카페인" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -180,7 +169,7 @@
                     </li>
                     <li class="grid-item">
                         <div class="grid-item-img">
-                            <img src="img\contents9.jpg" alt="1인 빙수" width="258" height="258">
+                            <img src="img/contents9.jpg" alt="1인 빙수" width="258" height="258">
                         </div>
                         <div class="grid-item-txt">
                             <p class="cate">메뉴</p>
@@ -193,7 +182,7 @@
             <div class="contents-right">
                 <h3>조금 더 특별하고<br>따뜻한, 그런 카페베네</h3>
                 <div class="contents-cafe-item">
-                    <img src="img\rbanner1.jpg" alt="내가 오픈하고 싶은 카페">
+                    <img src="img/rbanner1.jpg" alt="내가 오픈하고 싶은 카페">
                     <div class="txt">
                         <h4>내가 오픈하고 싶은 카페</h4>
                         <p class="con">동네와 공간, 저마다의<br>특별함과 다양함은 모두 다르니까요</p>
@@ -201,7 +190,7 @@
                     <a target="_self">인테리어 보기</a>
                 </div>
                 <div class="contents-cafe-item">
-                    <img src="img\rbanner2.jpg" alt="가맹 개설 안내">
+                    <img src="img/rbanner2.jpg" alt="가맹 개설 안내">
                     <div class="txt">
                         <h4>가맹 개설 안내</h4>
                         <p class="con">가맹점 개설을 위한 절차를<br>자세하게 안내드립니다</p>
@@ -209,7 +198,7 @@
                     <a target="_self">개설 절차 보기</a>
                 </div>
                 <div class="contents-cafe-item">
-                    <img src="img\rbanner3.jpg" alt="베네 운영 꿀팁">
+                    <img src="img/rbanner3.jpg" alt="베네 운영 꿀팁">
                     <div class="txt">
                         <h4>베네 운영 꿀팁</h4>
                         <p class="con">카페베네 점주님들을 위한<br>실용 만점 운영 꿀팁 모음</p>
@@ -220,91 +209,97 @@
         </section>
         <section class="hello-again">
             <div class="static">
-                <h3><img src="img\banner1.jpg" alt="배너1"></h3>
+                <h3><img src="img/banner1.jpg" alt="배너1"></h3>
                 <div class="ha-bx1">
                     <a target="_self" class="tit-ar">
-                        <img src="img\banner2.gif" alt="배너2">
+                        <img src="img/banner2.gif" alt="배너2">
                         <p>'좋은’ 사람들이<br>
                             ‘좋은’ 원두로 <br>
                             ‘좋은’ 커피를 내리는 곳<br>
                             바로 카페베네입니다.</p>
                     </a>
                     <a target="_self" class="pho-ar">
-                        <img src="img\banner3.jpg" alt="배너3">
+                        <img src="img/banner3.jpg" alt="배너3">
                     </a>
                 </div>
                 <div class="mov-ar">
                     <!-- 이미지 이거나 동영상 -->
-                    <img src="img\banner5.gif" alt="배너5">
+                    <img src="img/banner5.gif" alt="배너5">
                 </div>
                 <div class="pho-ar2">
-                    <a target="_self"><img src="img\banner4.png" alt="배너4"></a>
+                    <a target="_self"><img src="img/banner4.png" alt="배너4"></a>
                 </div>
                 <div class="pho-ar3">
-                    <a target="_self"><img src="img\banner6.png" alt="배너6"></a>
+                    <a target="_self"><img src="img/banner6.png" alt="배너6"></a>
                 </div>
                 <div class="pho-ar4">
-                    <img src="img\banner7.jpg" alt="배너7">
+                    <img src="img/banner7.jpg" alt="배너7">
                 </div>
                 <a target="_blank" class="ha-shop">
-                    <img src="img\event3.jpg" alt="BENE Shop">
+                    <img src="img/event3.jpg" alt="BENE Shop">
                     <h4>BENE Shop</h4>
                     <span class="btn-plus white">BENE Shop 더보기</span>
                 </a>
                 <a class="ha-news">
                     <h4>News</h4>
                     <span class="btn-plus white">News 더보기</span>
-                    <img src="img\event2.jpg" alt="News">
+                    <img src="img/event2.jpg" alt="News">
                 </a>
                 <a class="ha-event">
                     <h4>Event</h4>
                     <span class="btn-plus white">Event 더보기</span>
-                    <img src="img\event1.jpg" alt="Event">
+                    <img src="img/event1.jpg" alt="Event">
                 </a>
             </div>
-        </section>
+            <div class="aside">
+                <a class="aside-nbene">
+                    <img src="img/popup.png"><!-- 창업설명회 -->
+                </a>
+                <a class="aside-insta">
+                    <img src="img/aside-insta.png"><!-- 인스타그램 -->
+                </a>
+            </div>
+        </section><!--container-->
+    </div><!--main-->
+</div>
+<footer id="footer">
+    <div class="footer-top">
+        <div class="static">
+            <ul>
+                <li><a>오시는 길</a></li>
+                <li><a>제휴문의</a></li>
+                <li><a>개인정보처리방침</a></li>
+                <li><a>이용약관</a></li>
+                <li><span>고객센터 1688-4666</span></li>
+            </ul>
+            <button type="button" onclick="window.scrollTo({top:0, left:0, behavior:'smooth'})" class="btn-top">Top</button>
+        </div>
     </div>
 
-
-        <footer id="footer">
-            <div class="footer-top">
-                <div class="static">
-                    <ul>
-                        <li><a>오시는 길</a></li>
-                        <li><a>제휴문의</a></li>
-                        <li><a>개인정보처리방침</a></li>
-                        <li><a>이용약관</a></li>
-                        <li><span>고객센터 1688-4666</span></li>
-                    </ul>
-                    <button type="button" onclick="window.scrollTo({top:0, left:0, behavior:'smooth'})" class="btn-top">Top</button>
+    <div class="footer-btm">
+        <div class="static">
+            <div class="footer-btm-info">
+                <div class="info">
+                    <address>서울시 성동구 상원1길 25</address>
+                    <span class="tt">대표이사</span>
+                    <span class="ts">박그레타</span>
+                    <br>
+                    <span class="tt">사업자등록번호</span>
+                    <span class="ts">206-86-29161</span>
+                    <span>benecs@caffebene.co.kr</span>
                 </div>
+                <p class="copy">Copyright&copy; by Caffebene, All right reserved.</p>
             </div>
-
-            <div class="footer-btm">
-                <div class="static">
-                    <div class="footer-btm-info">
-                        <div class="info">
-                            <address>서울시 성동구 상원1길 25</address>
-                            <span class="tt">대표이사</span>
-                            <span class="ts">박그레타</span>
-                            <br>
-                            <span class="tt">사업자등록번호</span>
-                            <span class="ts">206-86-29161</span>
-                            <span>benecs@caffebene.co.kr</span>
-                        </div>
-                        <p class="copy">Copyright&copy; by Caffebene, All right reserved.</p>
-                    </div>
-                    <div class="footer-btm-sns">
-                        <a class="ico-fb">페이스북</a>
-                        <a class="ico-inst">인스타그램</a>
-                        <a class="ico-youtube">유투브</a>
-                        <a class="ico-app">APP</a>
-                    </div>
-
-                </div>
+            <div class="footer-btm-sns">
+                <a class="ico-fb">페이스북</a>
+                <a class="ico-inst">인스타그램</a>
+                <a class="ico-youtube">유투브</a>
+                <a class="ico-app">APP</a>
             </div>
-        </footer><!--footer-->
-    </div><!--wrap-->
+        </div>
+    </div>
+</footer><!--footer-->
 
+</div><!--wrap-->
 </body>
 </html>
