--- a/NewMenuList2.html
+++ b/NewMenuList2.html
@@ -17,7 +17,7 @@
     <div id="wrap">
       <header id="header">
         <div class="static">
-            <h1 class="logo"><a href="H+M.html">caffeBENE</a></h1>
+            <h1 class="logo"><a href="index.html">caffeBENE</a></h1>
             <nav id="gnb">
                 <ul class="mainmenu">
                     <li><a class="menutitle">Caffebene</a>
